syntax = "proto3";

package wearable.v1;

option go_package = "pb/wearable/v1;wearablepb";

message BeatsPerMinuteRequest { string uuid = 1; }

message BeatsPerMinuteResponse {
  uint32 value = 1;
  uint32 minute = 2;
}

service WearableService {
  rpc BeatsPerMinute(BeatsPerMinuteRequest)
      returns (stream BeatsPerMinuteResponse) {};
}